# passlocker

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  snapcraft.yaml
.spyproject/config/: workspace.ini
db/: .check
passlocker/: __init__.py  __main__.py  cui.py  gui.py  passlocker.py
tests/: test_passlocker.py
